# Archipelago

./: .gitignore  Doksi.docx  Dokumentáció.docx  FejlesztőiDoksi.docx  meson.build  vázlat.txt  ~$Doksi.docx  ~WRL1269.tmp
sources/: main.c  meson.build
sources/Base/: Point.h  Rect.h  Types.h  Vector.h
sources/Camera/: Camera.c  Camera.h  RenderingData.h  meson.build
sources/Camera/Test/: CameraTest.cpp
sources/Collision/: CollisionDetection.c  CollisionDetection.h  meson.build
sources/Collision/Test/: CollisionTest.cpp
sources/Components/: Collision.h  Graphics.h  Input.h  Signatures.h  Transform.h
sources/DataStructures/: UnorderedArray.c  UnorderedArray.h  meson.build
sources/DataStructures/Test/: DataStructuresTest.cpp
sources/ECS/: ECS.c  ECS.h  meson.build
sources/ECS/Test/: ECSTest.cpp
sources/Pathfinding/: AStar.c  AStar.h  meson.build
sources/Pathfinding/Test/: PathfindingTest.cpp
sources/TextureManager/: TextureManager.c  TextureManager.h  meson.build
sources/View/: GameView.c  GameView.h  meson.build
sources/World/: EntityActions.c  EntityActions.h  World.c  World.h  meson.build
